after day 2 ITANN

--- a/06_core_library_functions.ipynb
+++ b/06_core_library_functions.ipynb
@@ -73,18 +73,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ca6edbdd",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the number 1 letter of the alphabet is a\n",
+      "the number 2 letter of the alphabet is b\n",
+      "the number 3 letter of the alphabet is c\n",
+      "the number 4 letter of the alphabet is d\n"
+     ]
+    }
+   ],
    "source": [
     "for (i, c) in enumerate(\"abcd\"):\n",
-    "    print(f'the number {i+1} letter of the alphabet is {c}')\n",
-    "\n"
+    "    print(f'the number {i+1} letter of the alphabet is {c}')\n"
    ]
   },
   {
@@ -103,14 +113,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e295c8d2",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "employee_id;last_name;role\n",
+      "1;Jacobs;ict architect\n",
+      "2;Howard;programmer\n",
+      "3;Pierson;data scientist\n"
+     ]
+    }
+   ],
    "source": [
     "for line in open(\"data/employees.txt\"):\n",
     "    print(line.strip())\n"
@@ -135,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "35f5d0cc",
    "metadata": {
     "slideshow": {
@@ -209,14 +230,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4e6527ce",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S   is encoded by 83 \n",
+      "o   is encoded by 111\n",
+      "m   is encoded by 109\n",
+      "e   is encoded by 101\n",
+      "    is encoded by 32 \n",
+      "T   is encoded by 84 \n",
+      "e   is encoded by 101\n",
+      "x   is encoded by 120\n",
+      "t   is encoded by 116\n"
+     ]
+    }
+   ],
    "source": [
     "test = \"Some Text\"\n",
     "ords = []\n",
@@ -248,14 +285,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2f5be15c",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'guava', 'kiwi']\n",
+      "['kiwi', 'apple', 'guava']\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = [\"kiwi\", \"apple\", \"guava\"]\n",
     "print(sorted(fruits))\n",
@@ -264,14 +310,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "aca1e38e",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'guava', 'kiwi']\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = [\"kiwi\", \"apple\", \"guava\"]\n",
     "fruits.sort()\n",
@@ -292,14 +346,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d458696e",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[4, 3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "print(sorted([3, 2, 4, 1])) # default is reverse=False\n",
     "print(sorted([3, 2, 4, 1], reverse=True))"
@@ -307,14 +370,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8f9467f3",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numbers = [3, 2, 4, 1]\n",
     "numbers.sort(reverse=True)\n",
@@ -339,14 +413,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a764939c",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['kiwi', 'apple', 'guava']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def second_character_sorter(word):\n",
     "    return word[1]\n",
@@ -379,14 +464,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "22a1c25b",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['kiwi', 'apple', 'guava']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fruits = [\"kiwi\", \"apple\", \"guava\"]\n",
     "\n",
@@ -407,14 +503,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2841bd87",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'banana', 'color': 'yellow', 'origin': 'Africa'},\n",
+       " {'name': 'apple', 'color': 'green/red', 'origin': 'Europe'},\n",
+       " {'name': 'orange', 'color': 'orange', 'origin': 'Europe'},\n",
+       " {'name': 'kiwi', 'color': 'green', 'origin': 'New Zealand'}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fruits = [\n",
     "    {'name': 'apple', 'color': 'green/red', 'origin': 'Europe'},\n",
@@ -441,14 +551,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f0313fe8",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'first': 'Julia', 'last': 'Adams', 'age': 28},\n",
+       " {'first': 'Mark', 'last': 'Adams', 'age': 35},\n",
+       " {'first': 'Rose', 'last': 'Berg', 'age': 51},\n",
+       " {'first': 'Brad', 'last': 'Young', 'age': 64}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "persons = [{'first': 'Mark', 'last': 'Adams', 'age': 35},\n",
     "           {'first': 'Brad', 'last': 'Young', 'age': 64}, \n",
@@ -642,7 +766,7 @@
     }
    ],
    "source": [
-    "from math import ceil, floor\n",
+    "from math import ceil, floor \n",
     "print(ceil(3.1222))\n",
     "print(floor(3.567))"
    ]
@@ -1387,7 +1511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
