--- a/10_exercises.ipynb
+++ b/10_exercises.ipynb
@@ -940,10 +940,28 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(3, 6), (8, 2), (7, 5), (1, 4)]\n"
+     ]
+    }
+   ],
    "source": [
     "l = [3, 6, 8, 2, 7, 5, 1, 4]\n",
-    "# YOUR CODE\n"
+    "# YOUR CODE\n",
+    "\n",
+    "new_list = list()\n",
+    "length = len(l)\n",
+    "for i in range(0, length, 2):\n",
+    "    t = (l[i], l[i+1])\n",
+    "    #print(t)\n",
+    "    new_list.append(t)\n",
+    "print(new_list)\n",
+    "\n",
+    "#[(l[i], l[i+1]) for i in range(0, len(l), 2)]"
    ]
   },
   {
@@ -1216,7 +1234,7 @@
    "source": [
     "### 06.4 Sorting\n",
     "\n",
-    "Given the list of tuples below, holding first names, last names and ages of persons, sort it according to\n",
+    "Given the list of tuples below, holding first names, last names, ages, lengths and weights of persons, sort it according to\n",
     "\n",
     "a) First name\n",
     "\n",
@@ -1251,21 +1269,35 @@
     "sorted(persons, key = lambda person: (person[1], person[0]))\n",
     "\n",
     "```\n",
-    "</details>"
+    "</details>\n",
+    "\n",
+    "d) The person's BMI\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "# publish a key representing a filed that is not actually present\n",
+    "sorted(persons, key = lambda person: person[4]/(person[3]**2) )\n",
+    "\n",
+    "```\n",
+    "</details>\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "persons = [('John', 'Doe', 57),\n",
-    "          ('Anna', 'Doe', 62),\n",
-    "          ('Allie', 'Zandt', 42),\n",
-    "          ('Roger', 'Marre', 35),\n",
-    "          (\"Z'duru\", 'Ambarda', 39)]\n",
-    "# YOUR CODE"
+    "persons = [('John', 'Doe', 57, 180, 80),\n",
+    "          ('Anna', 'Doe', 62, 190, 97),\n",
+    "          ('Allie', 'Zandt', 42, 176, 78),\n",
+    "          ('Roger', 'Marre', 35, 181, 72),\n",
+    "          (\"Z'duru\", 'Ambarda', 39, 166, 70)]\n",
+    "# YOUR CODE\n"
    ]
   },
   {
@@ -1317,7 +1349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE"
+    "# YOUR CODE\n"
    ]
   },
   {
