--- a/04_functions.ipynb
+++ b/04_functions.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -257,17 +257,21 @@
      "text": [
       "50.0\n",
       "100000.0\n",
-      "50.0\n"
+      "50.0\n",
+      "Calculates the distance in meters given a speed in km/h and\n",
+      "    elapsed time in seconds\n"
      ]
     }
    ],
    "source": [
     "def distance_meters(speed_km_h, time_sec):\n",
+    "    '''Calculates the distance in meters given a speed in km/h and\n",
+    "    elapsed time in seconds'''\n",
     "    return (1000 / 3600) * speed_km_h * time_sec\n",
     "\n",
     "print(distance_meters(36, 5))\n",
     "print(distance_meters(100, (60*60)))                  # one hour\n",
-    "print(distance_meters(time_sec = 5, speed_km_h = 36)) # using named arguments\n"
+    "print(distance_meters(time_sec = 5, speed_km_h = 36)) # using named arguments"
    ]
   },
   {
@@ -807,7 +811,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "rise": {
    "height": "90%",
