--- a/11_exercises.ipynb
+++ b/11_exercises.ipynb
@@ -73,16 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "25.132741228718345"
+       "12.566370614359172"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +766,7 @@
     "         'number': 11}, \n",
     "         [\"Life Sciences\", \"Building env\", \"ICT\", \"Engineering\"],\n",
     "         ('Wing A', 'Wing B', 'Wing C', 'Wing H'))\n",
-    "# YOUR CODE"
+    "# YOUR CODE\n"
    ]
   },
   {
@@ -951,17 +951,7 @@
    ],
    "source": [
     "l = [3, 6, 8, 2, 7, 5, 1, 4]\n",
-    "# YOUR CODE\n",
-    "\n",
-    "new_list = list()\n",
-    "length = len(l)\n",
-    "for i in range(0, length, 2):\n",
-    "    t = (l[i], l[i+1])\n",
-    "    #print(t)\n",
-    "    new_list.append(t)\n",
-    "print(new_list)\n",
-    "\n",
-    "#[(l[i], l[i+1]) for i in range(0, len(l), 2)]"
+    "# YOUR CODE\n"
    ]
   },
   {
@@ -1522,14 +1512,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 08 Object-oriented Programming"
+    "## 08 The exeption mechanism"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 08.1 A Zoo class\n",
+    "### 08.1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 09 Regular Expressions and the `re` module"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 09.1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10 Object-oriented Programming"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10.1 A Zoo class\n",
     "\n",
     "a). Study the docs of `defaultdict` from module `collections` [here](https://docs.python.org/3/library/collections.html#collections.defaultdict). You should use this container in this exercise. Create a Zoo class that can be used to hold a collection of zoo animals. Initialize it with a `defaultdict` to hold animals that will be retrievable by species name.\n",
     "\n",
@@ -1736,7 +1754,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 10. Programming challenges\n",
+    "# 11. Programming challenges\n",
     "All these challenges require you to use several to many of the learned concepts of this course. They are star-coded to indicate the difficulty level, ranging from one <strong>&#10034;</strong> to five <strong>&#10034;&#10034;&#10034;&#10034;&#10034;</strong>. Some challenges start out with one star, but represent more stars when finished completely.\n",
     "\n",
     "You are encouraged to create real programs in dedicated scripts, with a `main()` method that is called from within this construct:\n",
@@ -1754,7 +1772,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.1 A number guessing game (&#10034;)\n",
+    "### 11.1 A number guessing game (&#10034;)\n",
     "\n",
     "Write an application that asks the user to think of a number, and try to guess this number as efficiently as possible.\n",
     "\n",
@@ -1779,7 +1797,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.2 Finding palindromes (&#10034; to &#10034;&#10034;&#10034;&#10034;)\n",
+    "### 11.2 Finding palindromes (&#10034; to &#10034;&#10034;&#10034;&#10034;)\n",
     "\n",
     "A palindrome is a word, phrase, or sequence that reads the same backwards as forwards, e.g. \"madam\" or \"nurses run\". In biological sequence analysis palindromes are often important protein-binding DNA elements. They are sometimes literal palindromes, as in \"GGATTAGG\", or _complementary_ palindromes, where the same sequence is present in the reverse complement strand of the double helix, as in GGAATTCC:\n",
     "\n",
@@ -1803,7 +1821,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.3 Hangman word guessing game (&#10034;&#10034;)\n",
+    "### 11.3 Hangman word guessing game (&#10034;&#10034;)\n",
     "\n",
     "Hangman is a word-quessing game where one party (in this case the computerprogram you will write) chooses a word that the other party needs to guess. The number of letters in the word is indicated with dashes or underscores.  \n",
     "The guessing party takes turns guessing wich letter will be in the word. If the guessed letter is in the word the dashes are replaced at the correct position(s) with the letter. If the guessed letter is not in the word, a gallow is build piece by piece (one piece for each absent letter). In total, the gallow consists of nine parts, including the hanged. You can choose to visualize progress using another picture of course. The easiest way is using \"ASCII art\", as in this example:\n",
@@ -1825,7 +1843,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.4 Encrypt and decrypt messages using Caesar cipher (&#10034;&#10034; to &#10034;&#10034;&#10034;)\n",
+    "### 11.4 Encrypt and decrypt messages using Caesar cipher (&#10034;&#10034; to &#10034;&#10034;&#10034;)\n",
     "\n",
     "Caesar's cipher is one of the simplest and most widely known encryption techniques. Each letter in a text is replaced by a letter some fixed number of positions down (or iup) the alphabet.\n",
     "For example, with a left shift of 3, D would be replaced by A, E would become B, and so on. The method is named after Julius Caesar, who used it in his private correspondence (see [Wikipedia](https://en.wikipedia.org/wiki/Caesar_cipher)).\n",
@@ -1839,7 +1857,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.5 Create a data dashboard (&#10034;&#10034; to &#10034;&#10034;&#10034;&#10034;)\n",
+    "### 11.5 Create a data dashboard (&#10034;&#10034; to &#10034;&#10034;&#10034;&#10034;)\n",
     "Create an app that receives a file with structured data (columns) as input. The app then reads this file _in a streaming manner_ and reports statistics of the file contents. The first three of these are mandatory, the subsequent features are optional and increase the level of this challenge.\n",
     "\n",
     "1. Dimensions of the dataset (rows/comuns)\n",
@@ -1856,7 +1874,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.6 Implement k-Means clustering (&#10034;&#10034;&#10034;&#10034;)\n",
+    "### 11.6 Implement k-Means clustering (&#10034;&#10034;&#10034;&#10034;)\n",
     "\n",
     "The k-Means clustering algorithm is used much in data science to group data in an unsupervised manner. See [Wikipedia](https://en.wikipedia.org/wiki/K-means_clustering) for details.\n",
     "\n",
@@ -1897,7 +1915,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.7 Implement neighbor joining clustering(&#10034;&#10034;&#10034;&#10034;)\n",
+    "### 11.7 Implement neighbor joining clustering(&#10034;&#10034;&#10034;&#10034;)\n",
     "\n",
     "See [Wikipedia](https://en.wikipedia.org/wiki/Neighbor_joining) for details.\n",
     "You could employ several strategies. The first is classical joining where you end up with a structure with all nodes connected. You can also force the algorithm to stop when a set number of clusters has been formed. This makes it comparable to k-Means but without the random seeding (thus deterministic)."
@@ -1907,7 +1925,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.8 Create a Game of Life simulation app (&#10034;&#10034;&#10034;&#10034;&#10034;)\n",
+    "### 11.8 Create a Game of Life simulation app (&#10034;&#10034;&#10034;&#10034;&#10034;)\n",
     "\n",
     "The [Game of Life](https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life) or Conway's Game of Life is a simulation of a simple growth experiment. It follows a few simple rules deciding whether a cell (an element in a 2D grid) will live or die. The challenge here is to visualize the simulation so you will need to work with a Graphical User Interface (GUI) toolkit. There are several libraries for that purpose available in Python but I suggest you use TkInter, PyQt5 or PySimpleGUI - see [here](https://www.activestate.com/blog/top-10-python-gui-frameworks-compared/). \n"
    ]
