--- a/11_exercises.ipynb
+++ b/11_exercises.ipynb
@@ -1449,7 +1449,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 07.2 Some more juice in comprehensions\n",
+    "### 07.2 Some more basic listcomps\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a) Go from this `[1, 3, \"H\", 4, \"K\"]` to this `[1, 9, \"hh\", 16, \"kk\"]`\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "my_data = [1, 3, \"H\", 4, \"K\"]\n",
+    "[e.lower()*2 if type(e) == str else e**2 for e in my_data]\n",
+    "```\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_data = [1, 3, \"H\", 4, \"K\"]\n",
+    "# YOUR CODE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) Go from this `xy_coords = [(3, 4), (1, 5), (6, 4), (5, 1)]` to this `[1, 4, 2]`; i.e. calculate the absolute difference between x and y of each coordinate.\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "[abs(x - y) for x, y in xy_coords if x > 1 and y > 1]\n",
+    "# or, alternatively\n",
+    "[abs(t[0] - t[1]) for t in xy_coords if t[0] > 1 and t[1] > 1]\n",
+    "```\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xy_coords = [(3, 4), (1, 5), (6, 4), (5, 1)]\n",
+    "# YOUR CODE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 07.3 Some more juice in comprehensions\n",
     "These exercises should all be solved using comprehensions.\n",
     "\n",
     "a) from this list, `[3, 1, 6, 5, 2]` create the list `[[0, 1, 2], [0], [0, 1, 2, 3, 4, 5], [0, 1, 2, 3, 4], [0, 1]]`\n",
@@ -1519,7 +1579,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 08.1"
+    "### 08.1 From output to implementation\n",
+    "Given the output below, which is the result from running a cell, implement the code that will generate exactly this output.\n",
+    "![](pics/stack_to_implementation.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 08.2 add error handling\n",
+    "\n",
+    "In the `data` folder you will find a file, [dirty_data.csv](data/dirty_data.csv). This serves as input to the Python script [add_error_handling.py](scripts/add_error_handling.py) that is present in the `scripts` folder. This is the script:\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "def read_file(file):\n",
+    "    '''Reads in the given data and returns a list of tuples,\n",
+    "    where each tuple contains exactly 3 numbers'''\n",
+    "    result = list()\n",
+    "    with open(file) as f:\n",
+    "        for line in f:\n",
+    "            print(f)\n",
+    "    return result\n",
+    "\n",
+    "def process_numbers(numbers):\n",
+    "    '''Receives a list of tuples of 3 numbers each.\n",
+    "    Then calculates the first number divided by the second number, \n",
+    "    and this times third number for each tuple.\n",
+    "    Returns a List of results.'''\n",
+    "    for t in numbers:\n",
+    "        pass\n",
+    "\n",
+    "def main(args):\n",
+    "    '''Receives the command-line argument with file and \n",
+    "    processes this with the two functions.\n",
+    "    Then reports the average of all processed cases.'''\n",
+    "    numbers = read_file(args[1])\n",
+    "    processed = process_numbers(numbers)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    '''main entry point'''\n",
+    "    import sys\n",
+    "    main(sys.argv)\n",
+    "```\n",
+    "\n",
+    "It is your task to add all types of error handling that will make this a robust piece of functionality.\n",
+    "This involves catching and dealing with exceptions/errors, but also verifying user input and dealing with erroneous input in a correct and friendly manner.\n"
    ]
   },
   {
